--- a/BetterThanTelly/app/views/events/edit.html.erb
+++ b/BetterThanTelly/app/views/events/edit.html.erb
@@ -1,36 +1,46 @@
 <div class="row">
     <div class="col-12">
-      <h1>Edit <%= @event.title %></h1>
+      <h1>Editing "<%= @event.title %>"</h1>
     </div>
 </div>
 
-<ul>
+<div class="flex-container">
+
+<div class="block-container">
     <%= form_for(@event) do |f| %>
         
         <%= f.hidden_field :user_id, :value=> session[:user_id] %>
-      <li> <p> <%= f.label :title %></p>
-        <%= f.text_field :title %>  </li>
+       <h4> <%= f.label :title %></h4>
+        <%= f.text_field :title %>  
 
-      <li><p> <%= f.label :event_date %> </p>
-        <%= f.date_field :event_date %> </li> 
+      <h4> <%= f.label :event_date %> </h4>
+        <%= f.date_field :event_date %> 
 
-      <li> <p> <%= f.label :event_time %> </p>
-        <%= f.time_field :event_time %> </li>
+      <h4> <%= f.label :event_time %> </h4>
+        <%= f.time_field :event_time %>
 
-      <li> <p> <%= f.label :venue %> </p>
-        <%= f.collection_select :venue_id, Venue.all, :id, :name, include_blank: 'Please choose a venue' %> </li>
+       <h4> <%= f.label :venue %> </h4>
+        <%= f.collection_select :venue_id, Venue.all, :id, :name, include_blank: 'Please choose a venue' %>
 
-      <li> <p><%= f.label :description %> </p>
-        <%= f.text_area :description %> </li> 
+       <h4><%= f.label :description %> </h4>
+        <%= f.text_area :description %>
 
-     <li> <p> <%= f.label :category %> </p> 
-        <%= f.collection_select :category_id, Category.all, :id, :name, include_blank: 'Please choose a category' %></li> 
-    
+      <h4> <%= f.label :category %> </h4> 
+        <%= f.collection_select :category_id, Category.all, :id, :name, include_blank: 'Please choose a category' %>
+    <br><br>
 
     <%= f.submit %>
 <% end %>
-  </ul>
 
+</div>
 
-  <h4>Delete event?</h4>
-  <%= link_to 'Delete event', @event, { method: 'delete', data: {confirm: 'Are you sure?'} } %>
+ <% flash.each do |name, messages| %>
+      <div class="flash-warnings">
+      <% messages.each do |message| %>
+       <p> <%= message %> </p>
+      <% end %>
+      </div>
+    <% end %>
+
+</div>
+  
