--- a/BetterThanTelly/app/views/users/edit.html.erb
+++ b/BetterThanTelly/app/views/users/edit.html.erb
@@ -1,11 +1,23 @@
-<h1>Edit your user profile page</h1>
+<div class="row">
+     <div class="col-12">
+          <h1>Edit your user profile page</h1>
+     </div>
+</div>
 
-<ul>
-<%= form_for(@user) do |f| %>
-     <li>Name: <%= f.text_field :name %></li>
-     <li>Email: <%= f.email_field :email %></li>
-     <li>Password: <%= f.password_field :password %></li>
-     <li>Confirm your password: <%= f.password_field :password_confirmation %></li>
-     <%= f.submit %>
-<% end %>
-  </ul>
+<div class="flex-container">
+     <div class="block-container">
+          <%= form_for(@user) do |f| %>
+               <h4><%= f.label :name %></h4>
+               <p><%= f.text_field :name %></p>
+               <h4><%= f.label :name %></h4>
+               <p><%= f.email_field :email %></p>
+               
+               <h4><%= f.label :password %></h4>
+               <p><%= f.password_field :password %></p>
+               <h4><%= f.label :password_confirmation %></h4>
+               <p><%= f.password_field :password_confirmation %></p>
+               <%= f.submit %>
+          <% end %>
+     </div>
+</div>
+  
