Stylinig the rec'd block

--- a/BetterThanTelly/app/views/users/show.html.erb
+++ b/BetterThanTelly/app/views/users/show.html.erb
@@ -79,6 +79,12 @@
 <h2>Recommended events for you</h2>
     <div class="block-container">
     <!-- logic stuff here -->
+    <% @user.reccomend_me.each do |event| %>
+
+        <p><%= link_to Event.find(event).title, event_path(event) %></p>
+    
+    <% end %>
+    
 
     </div>
 
