--- a/BetterThanTelly/app/views/categories/index.html.erb
+++ b/BetterThanTelly/app/views/categories/index.html.erb
@@ -6,8 +6,8 @@
 
 <div class="flex-container">
     <% @categories.each do |category| %>
-       <div class="block-container"> 
-       <p> <%= link_to category.name, category_path(category) %></p>
+       <div class="block-container select-container"> 
+       <h2> <%= link_to category.name, category_path(category) %></h2>
        </div>
     <% end %>
 </div>
