--- a/BetterThanTelly/app/views/layouts/application.html.erb
+++ b/BetterThanTelly/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 <!--  <div class="flex-container"> -->
 <div class="flex-container">
     <div class="row">
-      <h1 id="logo">BetterThanTelly</h1>
+      <h1 id="logo"><%= link_to "BetterThanTelly", root_path %></h1>
     </div>
     </div>
 
@@ -24,6 +24,7 @@
       <li><p><%= link_to "Events", events_path %>  |  </p></li>
       <li><p><%= link_to "Venues", venues_path %>  |  </p></li>
       <li><p><%= link_to "Reviews", reviews_path %>  |  </p></li>
+      <li><p><%= link_to "Categories", categories_path %>  |  </p></li>
     <% if logged_in? %>
       <li><p><%= link_to "Create event", new_event_path %>  |  </p></li>
       <li><p><%= link_to "Leave review", new_review_path %>  |  </p></li>
