--- a/BetterThanTelly/app/views/reviews/index.html.erb
+++ b/BetterThanTelly/app/views/reviews/index.html.erb
@@ -7,7 +7,7 @@
 
 <div class="flex-container">
     <% @reviews.each do |review| %>
-        <div class="block-container">    
+        <div class="block-container select-container">    
         <h2>"<%= link_to review.title, review_path(review) %>"</h2>
         <p><%= link_to review.event.title, review_path(review) %></p>
         </div>
