--- a/BetterThanTelly/app/views/events/show.html.erb
+++ b/BetterThanTelly/app/views/events/show.html.erb
@@ -24,8 +24,14 @@
             <h4>See reviews:</h4>
             <% @event.reviews.each do |review| %>
             <hr>
-            <h4><%= review.rating %> &#9734; </h4> <p>"<%= link_to review.title, review_path(review) %>"</p>
+            <div class="star-rating">
+                <% review.rating.times do  %>
+                <h4> &#9734; </h4> 
+                <% end %>
+            </div>
+            <p>"<%= link_to review.title, review_path(review) %>"</p>
             <hr>
+        
             <% end %>
         <% else %>
             :)
