--- a/BetterThanTelly/app/views/layouts/application.html.erb
+++ b/BetterThanTelly/app/views/layouts/application.html.erb
@@ -13,11 +13,13 @@
   <body>
   
 <!--  <div class="flex-container"> -->
-<div class="flex-container">
     <div class="row">
+    <div class="col-4"></div>
+    <div class="col-4">
       <h1 id="logo"><%= link_to "BetterThanTelly", root_path %></h1>
     </div>
-    </div>
+     <div class="col-4"></div>
+</div>
 
   <div class="row">
     <ul class="nav">
