--- a/BetterThanTelly/app/views/categories/show.html.erb
+++ b/BetterThanTelly/app/views/categories/show.html.erb
@@ -5,14 +5,23 @@
 </div>
 
 
-
 <div class="flex-container">
+
+<% if @category.events.empty? %>
+<div class="block-container">
+<h2>No events match this category! <%= link_to "Make an event?", new_event_path %></h2>
+</div>
+<% else %>
     <% @category.events.each do |event| %>
       <div class="block-container select-container"> 
         <h2> <%= link_to event.title, event_path(event) %></h2>
       </div>
-
     <% end %>
+    
+<% end %>    
 </div>
+
+
+
 
 
