--- a/BetterThanTelly/app/views/venues/index.html.erb
+++ b/BetterThanTelly/app/views/venues/index.html.erb
@@ -7,7 +7,7 @@
 
 <div class="flex-container">
     <% @venues.each do |venue| %>
-       <div class="block-container">
+       <div class="block-container select-container">
        <h2><%= link_to venue.name, venue_path(venue) %></h2>
        </div>
     <% end %>
