--- a/BetterThanTelly/app/views/reviews/new.html.erb
+++ b/BetterThanTelly/app/views/reviews/new.html.erb
@@ -25,7 +25,7 @@
       <%= f.hidden_field :user_id, :value=> session[:user_id] %>
         <h4><%=f.label :event_id %></h4>
 
-          <%=f.collection_select :event_id, @user.get_past_events, :id, :title %>
+          <%=f.collection_select :event_id, @user.get_past_events, :id, :title, {include_blank: 'Select an event to review'}, {:class=>"select"} %>
 
         <h4> <%= f.label :title %></h4>
           <%= f.text_field :title %>  
@@ -34,7 +34,7 @@
           <%= f.text_area :content %>  
 
         <h4> <%= f.label :rating %> </h4> 
-          <%= f.select :rating, @rating_range %>
+          <%= f.select :rating, @rating_range, {include_blank: 'Choose Rating'}, {:class=>"select"} %>
           
       <p><%= f.submit %></p>
     <% end %>
