--- a/BetterThanTelly/app/views/events/index.html.erb
+++ b/BetterThanTelly/app/views/events/index.html.erb
@@ -15,7 +15,7 @@
 
 
 <div class="flex-container">
-    <% @events.each do |event| %>
+    <% @events[0].each do |event| %>
         <div class="block-container select-container">
             <h2><%= link_to event.title, event_path(event) %></h2>
             <h4><%= event.event_date.strftime("%A %-d %B %Y") %></h4>
