--- a/BetterThanTelly/app/assets/stylesheets/simple-grid.css
+++ b/BetterThanTelly/app/assets/stylesheets/simple-grid.css
@@ -18,7 +18,7 @@ body {
   top: 0;
   font-size: 100%;
   /* background-color: #f2f0eb;  #d9dfd1 */
-  background: #f2f0eb url('/assets/bg-faded.png')no-repeat left top;
+  background: #f2f0eb url('/assets/bg-faded2.png')no-repeat left top;
 }
 
 /* ROOT FONT STYLES */
